test/indexReplaceAlias1.slq

def main(){
	x:=H(0:ğ”¹);
	a:=vector(3,x);
	(a[0],a[0],a[0]):=(a[0],a[0],a[0]); // error
	return (x,a);
}
